# BasicSTFM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: opencity_interface_D.md  opencity_variable_interface.md  stage_recipe_guide.md
examples/: __init__.py  custom_model.py  custom_task.py
reports/: basicts_four_methods_flat.csv  basicts_four_methods_summary.md  basicts_protocol_pems04_12.json  basicts_two_runs_flat.csv  basicts_two_runs_summary.md  budget_matched_four_flat.csv  budget_matched_four_summary.md  compare_dpm_runs_flat.csv  compare_dpm_runs_table.md  cross_domain_scale_report.md  factost_protocol_audit_12.json  factost_protocol_audit_96.json  fewshot_trainability_audit.json  fewshot_trainability_audit.md  my_five_models_flat.csv  my_five_models_summary.md
scripts/: run_dpm_zs_fs_from_checkpoints.py
tests/: test_basicts_split.py  test_checkpoint.py  test_config.py  test_dpm_shapes.py  test_dpm_stage_protocol.py  test_dpm_transfer_freeze.py  test_example_imports.py  test_factost_revin.py  test_factost_split.py  test_foundation_models.py  test_model_config_resolution.py  test_monash_datamodule.py  test_multi_dataset.py  test_opencity_D_checkpoint_loading.py  test_opencity_D_fewshot_freeze.py  test_opencity_D_identity_mode.py  test_opencity_D_shapes.py  test_opencity_interface_loading.py  test_opencity_interface_shapes.py  test_opencity_interface_stage_freeze.py  test_partitioned_datamodule.py  test_registry.py  test_results_export.py  test_scaler.py  test_stable_task_v3.py  test_stage_eval_and_fewshot.py  (+4 more)
(+284 files in other folders)
